@@ -5,6 +5,7 @@ Version X.X (XXXX-XX-XX)
           This is primarily so that painting the component is no longer constrained by Swing dimensions,
           meaning that much larger files can be viewed now.
      New: Filled in a lot of common keyboard shortcuts for the basic UI and their equivalents for Mac OS X.
+     New: Errors reading from the binary now render as a red cross placeholder.
 
    Fixed: Fixed an issue where creating an annotation group larger than Integer.MAX_VALUE would overflow.
    Fixed: Fixed loading a file larger than Integer.MAX_VALUE using BinaryFactory. Larger files will now use
